--- a/index.html
+++ b/index.html
@@ -108,29 +108,41 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="box">
-                        <div class="box-icon">
-                            <img src="images/portfolio-icon-1.png" alt="">
+                        <div class="overlay-image">
+                            <div class="box-icon">
+                                <img class="image" src="images/portfolio-icon-1.png" alt="">
+                            </div>
+                            <div class="text">
+                            <h3>Large Portions</h3>
+                            <p>Maximize use of your ingredients by making large portions of food.</p>
+                            </div>
                         </div>
-                        <h3>Large Portions</h3>
-                        <p>Maximize use of your ingredients by making large portions of food.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="box">
-                        <div class="box-icon">
-                            <img src="images/portfolio-icon-6.png" alt="">
+                        <div class="overlay-image">
+                            <div class="box-icon">
+                                <img class="image" src="images/portfolio-icon-6.png" alt="">
+                            </div>
+                            <div class="text">
+                                <h3>Share Food</h3>
+                                <p>Share your food by adding your location to your map through a Google Form, which is embedded into our map!</p>
+                            </div>
                         </div>
-                        <h3>Share Food</h3>
-                        <p>Share your food by adding your location to your map through a Google Form, which is embedded into our map!</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="box">
-                        <div class="box-icon">
-                            <img src="images/portfolio-icon-3.png" alt="">
+                        <div class="overlay-image">
+                            <div class="box-icon">
+                                <img src="images/portfolio-icon-3.png" alt="">
+                            </div>
+                            <div class="text">
+                                <h3>Find Food to Exchange</h3>
+                                <p>View neightbors (pinpointed on the map) who are willing to exchange food.</p>
+                            </div>
                         </div>
-                        <h3>Find Food to Exchange</h3>
-                        <p>View neightbors (pinpointed on the map) who are willing to exchange food.</p>
                     </div>
                 </div>
             </div>
